crates/formatter/tests/snapshots/snapshots__synapse__main__delta__31__invites.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
--
-- This file is licensed under the Affero General Public License (AGPL) version 3.
--
-- Copyright (C) 2023 New Vector, Ltd
--
-- This program is free software: you can redistribute it and/or modify
-- it under the terms of the GNU Affero General Public License as
-- published by the Free Software Foundation, either version 3 of the
-- License, or (at your option) any later version.
--
-- See the GNU Affero General Public License for more details:
-- <https://www.gnu.org/licenses/agpl-3.0.html>.
--
-- Originally licensed under the Apache License, Version 2.0:
-- <http://www.apache.org/licenses/LICENSE-2.0>.
--
-- [This file includes modifications made by New Vector Limited]
--
--
/* Copyright 2016 OpenMarket Ltd
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

create table local_invites (
	stream_id bigint not null,
	inviter text not null,
	invitee text not null,
	event_id text not null,
	room_id text not null,
	locally_rejected text,
	replaced_by text
);

-- Insert all invites for local users into new `invites` table
insert into local_invites
select
	stream_ordering as stream_id,
	sender as inviter,
	state_key as invitee,
	event_id,
	room_id,
	null as locally_rejected,
	null as replaced_by
from events natural join current_state_events natural join room_memberships
where membership = 'invite' and state_key in (select name from users);

create index local_invites_id on local_invites (stream_id);
create index local_invites_for_user_idx
	on local_invites (invitee, locally_rejected, replaced_by, room_id);
